--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
         "homepage": "https://www.solutions4mobiles.com"
     }],
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "support": {
         "issues": "https://github.com/mobiweb/mobiweb-php/issues",
