--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "mobiweb/sdk",
-    "description": "4.0.0 PHP library for communicating with the MobiWeb REST APIs.",
+    "description": "4.0.2 PHP library for communicating with the MobiWeb REST APIs.",
     "minimum-stability": "stable",
     "keywords": [
-        "sms", "api", "mobiweb", "php", "messaging", "hlr", "hlr lookup", "mobile lookup", "mobile number lookup", "OTP", "one time password", "2FA", "two factor authentication", "smpp", "asynch"
+        "sms", "api", "mobiweb", "php", "messaging", "hlr", "hlr lookup", "mobile lookup", "mobile number lookup", "OTP", "one time password", "2FA", "two factor authentication", "smpp api", "smpp", "asynch"
     ],
     "type": "library",
     "license": "MIT",
@@ -14,7 +14,9 @@
         "homepage": "https://www.solutions4mobiles.com"
     }],
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "ext-curl": "*",
+        "ext-json": "*"
     },
     "support": {
         "issues": "https://github.com/mobiweb/mobiweb-php/issues",
